--- a/src/modules/tour/tour.styl
+++ b/src/modules/tour/tour.styl
@@ -1,5 +1,6 @@
 #tour
     min-height: 400px;
+    padding-top: 100px;
     position: relative;
 
     .container
@@ -10,7 +11,7 @@
             width: 100%;
 
     .macbook-screenshot
-        height: 320px;
+        height: 372px;
         max-width: 100%;
 
         @media screen and (min-width: 992px)
